Texture Paint Smear Brush Setting needs a change #64796

Closed
opened 2019-05-18 14:25:35 +02:00 by Michael P. · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.65

Blender Version
Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-17 23:36, hash: 03672e7783
Worked: (optional)

Short description of error
Texture Paint Smear Brush Setting needs a change

Exact steps for others to reproduce the error
Texture Paint Smear Brush Setting needs a change, because it doesn't "smear"

  • Open attached blend file
  • Start "smearing", there is a "echo" or "duplicate" effect

Set the "Spacing" to 3%, now there is a smear effect (Screenshot)

2019-05-18-smear-brush-settings.png

2019-05-18-smear-brush-settings.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.65 **Blender Version** Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-17 23:36, hash: `03672e7783` Worked: (optional) **Short description of error** Texture Paint Smear Brush Setting needs a change **Exact steps for others to reproduce the error** Texture Paint Smear Brush Setting needs a change, because it doesn't "smear" - Open attached blend file - Start "smearing", there is a "echo" or "duplicate" effect # Set the "Spacing" to 3%, now there is a smear effect (Screenshot) ![2019-05-18-smear-brush-settings.png](https://archive.blender.org/developer/F7045286/2019-05-18-smear-brush-settings.png) [2019-05-18-smear-brush-settings.blend](https://archive.blender.org/developer/F7045288/2019-05-18-smear-brush-settings.blend)
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-06-12 11:08:28 +02:00

@brecht, I'm guessing we can just lower the default spacing percentage (as suggested) to solve this.

@brecht, I'm guessing we can just lower the default spacing percentage (as suggested) to solve this.
Brecht Van Lommel removed their assignment 2019-06-14 19:11:00 +02:00
Jeroen Bakker was assigned by Brecht Van Lommel 2019-06-14 19:11:00 +02:00

I think so.

I think so.

This issue was referenced by a55aa1a2ca

This issue was referenced by a55aa1a2ca6ef01965bed690f9c5c73f16fd3390
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64796
No description provided.