Fix T64796: Default Spacing Smear Brush To 3%

Reviewers: brecht

Differential Revision: https://developer.blender.org/D5129